2010-10-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m91-1:
	- new snapshot
	- update external source tree
	
2010-10-23 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m90-1:
	- new snapshot
	- reenable gio

2010-10-07 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m89-1:
	- new snapshot
	- disable-gio because of http://www.openoffice.org/issues/show_bug.cgi?id=114970
	- add a buildfix to compile with recent redland/rasqal
	- make it work with python2=2.7

2010-10-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m88-1:
	- new snapshot

2010-09-05 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m87-1:
	- new snapshot
	- move addional sources into src array for clean chroot builds
	- rework deps for clean chroot builds
	- Enhance user painting capabilities during slideshow --enable-presenter-extra-ui


2010-08-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m86-1:
	- new snapshot
	- add buildfix for x86_64
	- drop another buildfix

2010-07-23 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m85-1:
	- new snapshot
	- add patch to build with system libmythes
	- drop merging the install dirs to stay upstream

2010-07-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m84-1:
	- disable PYTHONPATH changes in profile file
	- remove system-mythes patch that went upstream
	- explicitly point to internal mdds
	
2010-06-18 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m83-1:
	- new snapshot
	- apply fix from http://www.openoffice.org/issues/show_bug.cgi?id=111141
	  for broken i686 internal cppunit

2010-06-13 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m82-1:
	- new snapshot
	- build still broken

2010-06-10 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m81-1:
	- new snapshot
	- build broken http://www.openoffice.org/issues/show_bug.cgi?id=111990
