@@ -4,7 +4,7 @@
 
 pkgbase="openoffice-base-devel"
 pkgname=('openoffice-base-devel' 'openoffice-sdk-devel')
-_OO_milestone=DEV300_m91
+_OO_milestone=DEV300_m92
 pkgver=3.4_${_OO_milestone/DEV/dev}
 pkgrel=1
 arch=('i686' 'x86_64')
@@ -29,7 +29,6 @@ source=(${_OO_milestone}.tar.xz
 	soffice-detect-mozilla-certificates.diff
 	buildfix-gcc44.diff
 	buildfix_FormulaMissingHeader.diff
-	http://www.openoffice.org/nonav/issues/showattachment.cgi/72052/configure.set-redland-cflags.patch
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/sal-cpprt-gcc-4.5-workaround.diff
 	cppunit_gcc45.diff
 	openoffice.profile
@@ -108,7 +107,7 @@ source=(${_OO_milestone}.tar.xz
 	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
 	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2)
 options=('!distcc' '!ccache' '!makeflags')
-md5sums=('004be2a1529380a3b4499f7fb80432cd'
+md5sums=('08e2ee397906047aa4077b2df561fb68'
          'e3a0b76dcd876f3d721ee7183729153d'
          '09094988c7bfaa90e5d014523d558ebb'
          '71f136a31e296a04ab68932a31dd533e'
@@ -116,7 +115,6 @@ md5sums=('004be2a1529380a3b4499f7fb80432cd'
          '1dc7480a04f572ad136d35923a2af66d'
          'c8e82b4d2324fe62ad8c6e29213e80b5'
          '863a3ab2c17a3d11b8fa3ec321986366'
-         '283e7ac83bafd04eaeaffe9ad51e5f6e'
          'cf01fa2669f828864146842e040e3cf8'
          'bb5ada95f7b11a5cac5d669f7ae8baaa'
          '9fbee64a4a39e33a646c750d4978f48f'
@@ -227,8 +225,6 @@ build() {
 	# build fixes
 	patch -Np0 -i ${srcdir}/buildfix-gcc44.diff
 	patch -Np0 -i ${srcdir}/buildfix_FormulaMissingHeader.diff
-	# http://www.openoffice.org/issues/show_bug.cgi?id=114999
-	patch -Np1 -i ${srcdir}/configure.set-redland-cflags.patch
 	
 	# gcc4.5 fix
 	patch -Np0 -i ${srcdir}/sal-cpprt-gcc-4.5-workaround.diff
