@@ -1,3 +1,9 @@
+2010-11-05 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m92-1:
+	- new snapshot
+	- drop redland buildfix
+
 2010-10-29 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m91-1:
